--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>nju.software</groupId>
   <artifactId>homework1</artifactId>
-  <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
-
+  <version>1.0-SNAPSHOT</version>
   <name>homework1 Maven Webapp</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://maven.apache.org</url>
 
   <properties>
     <junit.version>4.7</junit.version>
@@ -230,6 +225,17 @@
       <version>1.6.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.2.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>1.3.2</version>
+    </dependency>
 
 
 
@@ -238,15 +244,14 @@
   <build>
 
     <resources>
-　　　　<resource>
-　　　　　  <directory>src/main/java</directory>
-　　　　　　<includes>
-　　　　　　　　<include>**/*.xml</include>
-　　　　　　</includes>
-           <filtering>false</filtering>
-　　　　</resource>
-　　</resources>
-
+      <resource>
+        <directory>src/main/java</directory>
+        <includes>
+          <include>**/*.xml</include>
+        </includes>
+        <filtering>false</filtering>
+      </resource>
+    </resources>
 
     <finalName>homework1</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
@@ -282,10 +287,5 @@
         </plugin>
       </plugins>
     </pluginManagement>
-
-
-
   </build>
-
-
 </project>
